--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -7,7 +7,15 @@ html,body {
 .bg-green {
   background: green;
 }
+.bg-green {
+  background: gray;
+}
 .button {
     font-size: 300px;
+    width: 100%;
+}
+
+.button-small {
+    font-size: 120px;
     width: 100%;
 }
