--- a/src/main/resources/templates/tictactoe.html
+++ b/src/main/resources/templates/tictactoe.html
@@ -29,7 +29,7 @@
     <div class="container" style="position: absolute; top:0; left 0; opacity: 0.8" th:if="${message!=null}">
         <div class="alert alert-info">
             <center>
-                <p style="font-size: 48px" th:if="${difficulty.name() == 'Difficult'}">Win is a challenge</p>
+                <p style="font-size: 48px" th:if="${difficulty.name() == 'Hardest'}">Win is a challenge</p>
                 <p style="font-size: 48px">[[${message}]]!</p>
                 <form action="/tictactoe" method="post">
                     <input type="hidden" name="player" th:value="${player}">
