--- a/src/main/resources/templates/tictactoe.html
+++ b/src/main/resources/templates/tictactoe.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" th:href="@{css/common.css}">
 
     <title>Play Game</title>
+
+    <script>
+        window.history.replaceState({}, '', '/')
+    </script>
 </head>
 <body style="height: 100%" class="h-100">
 
